comment out work
thanks for the code! it will be brought back in the next version!

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p>Actions</p>
                         <div class="button baby"><a href="javascript:sleep();">sleep</a></div>
                         <div class="button baby"><a href="javascript:laugh();">laugh</a></div>
-						<div class="button"><a href="javascript:work();">work</a></div>
+			<!--<div class="button"><a href="javascript:work();">work</a></div>-->
                     </div>
                 </td>
                 <td>
