--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                         <p>Actions</p>
                         <div class="button baby"><a href="javascript:sleep();">sleep</a></div>
                         <div class="button baby"><a href="javascript:laugh();">laugh</a></div>
-			<!--<div class="button"><a href="javascript:work();">work</a></div>-->
+                        <div class="button baby"><a href="javascript:cry();">cry</a></div>
+                        <div class="button baby"><a href="javascript:eat();">eat</a></div>
+			            <!--<div class="button"><a href="javascript:work();">work</a></div>-->
                     </div>
                 </td>
                 <td>
